--- a/src/styles/generals.scss
+++ b/src/styles/generals.scss
@@ -5,3 +5,9 @@
     padding: 0;
     font-family: 'Open Sans', sans-serif;
 }
+body{
+    background-color: rgb(213, 245, 240);
+}
+img{
+    width: 100%;
+}
