--- a/src/styles/generals.scss
+++ b/src/styles/generals.scss
@@ -5,8 +5,11 @@
     padding: 0;
     font-family: 'Open Sans', sans-serif;
 }
+header{
+    background-color: rgb(255, 255, 255);
+}
 body{
-    background-color: rgb(213, 245, 240);
+    background-color: rgb(235, 250, 255);
 }
 img{
     width: 100%;
